--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=ALWAYS
 
 server.port=4000
+
+# Logging configuration
+logging.level.root=INFO
