--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,18 @@
 spring.application.name=patient-service
 
+# Uncomment and configure the following lines to use H2 database
 # add h2 database configuration
-spring.h2.console.path=/h2-console
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:patientdb;
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=admin_viewer
-spring.datasource.password=Webdev2025?
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-# JPA/Hibernate configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.mode=ALWAYS
+#spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:patientdb;
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=admin_viewer
+#spring.datasource.password=Webdev2025?
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#
+## JPA/Hibernate configuration
+#spring.jpa.hibernate.ddl-auto=update
+#spring.sql.init.mode=ALWAYS
 
 server.port=4000
 
